--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "author": "Romain Guarinoni",
     "license": "ISC",
     "devDependencies": {
+        "@commitlint/cli": "^16.1.0",
+        "@commitlint/config-conventional": "^16.0.0",
+        "husky": "^7.0.4",
         "live-server": "^1.2.1",
         "typescript": "^4.5.5"
     }
