--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-    "name": "mastermind",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "type": "tsc --watch",
-        "start": "live-server"
-    },
-    "keywords": [],
-    "author": "Romain Guarinoni",
-    "license": "ISC",
-    "devDependencies": {
-        "@commitlint/cli": "^16.1.0",
-        "@commitlint/config-conventional": "^16.0.0",
-        "husky": "^7.0.4",
-        "live-server": "^1.2.1",
-        "typescript": "^4.5.5"
-    }
+  "name": "mastermind",
+  "version": "1.0.0",
+  "description": "",
+  "main": "dist/index",
+  "scripts": {
+    "start": "webpack-dev-server --open --mode development --port 8081",
+    "build": "webpack --mode production"
+  },
+  "keywords": [
+    "mastermind",
+    "game"
+  ],
+  "author": "Romain Guarinoni",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/register": "^7.16.9",
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "mini-css-extract-plugin": "^2.5.3",
+    "typescript": "^4.5.5",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.3"
+  }
 }
