--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --open --mode development --port 8081",
     "build": "npm run type && webpack --mode production",
     "type": "tsc",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "keywords": [
     "mastermind",
@@ -23,15 +24,20 @@
     "@babel/register": "^7.16.9",
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@types/jest": "^27.4.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "jest": "^27.4.7",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
+  },
+  "dependencies": {
+    "babel-jest": "^27.4.6"
   }
 }
