--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index",
   "scripts": {
     "start": "webpack-dev-server --open --mode development --port 8081",
-    "build": "webpack --mode production"
+    "build": "npm run type && webpack --mode production",
+    "type": "tsc",
+    "prettier": "prettier --write ."
   },
   "keywords": [
     "mastermind",
@@ -26,6 +28,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "mini-css-extract-plugin": "^2.5.3",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
