--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install project dependencies
         run: npm install
 
+      - name: Run eslint
+        run: npm run lint
+
       - name: Run the unit tests
         run: npm run test
 
