--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rm -rf dist/ && npm run type && webpack --mode production",
     "type": "tsc",
     "format": "prettier --write .",
+    "lint": "eslint src/**/*.ts test/**/*.ts",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -26,9 +27,13 @@
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.5.1",
+    "eslint": "^8.8.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
