--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
   },
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "spaced-comment": ["error", "always", { "markers": ["/"] }]
   },
   "parser": "@typescript-eslint/parser",
   "ignorePatterns": ["*.d.ts"]
