--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist/ && npm run type && webpack --mode production",
     "type": "tsc",
     "format": "prettier --write .",
-    "lint": "eslint src/**/*.ts test/**/*.ts",
+    "lint": "eslint src/**/*.ts test/**/*.ts --fix",
     "test": "jest",
     "prepare": "husky install"
   },
