--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   },
   "dependencies": {
     "babel-jest": "^27.4.6",
-    "jsdoc": "^3.6.10",
-    "date-fns": "^2.28.0"
+    "jsdoc": "^3.6.10"
   }
 }
